--- a/index.html
+++ b/index.html
@@ -3,114 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV Nastassia Klimenka</title>
+
 </head>
 <body>
-
-    <header>
+  <div class = "body">
+    <header class = "header">
      <h1>CV Nastassia Klimenka</h1>
     </header>
     <section>
+        <div class = "personal">
+        <img src="foto.jpg" alt="Foto">
         <h2>Personal Details</h2>
         <p>Female</p>
-        <p> 34 years old, born on 22 November 1985</p>
-        <p>  Minsk</p>
+        <p>34 years old, born on 22 November 1985</p>
+        <p>Minsk</p>
+    </div>
       </section>
 
       <div class = "contacts">
         <h2>Contacts</h2>
-        <p>Tel. +375 (29) 322-11-85 (Viber, WhatsApp, Telegram)</p>
-        <p>Email: nst22@yandex.ru</p>
+        <p><b>Tel. +375 (29) 322-11-85</b> (Viber, WhatsApp, Telegram)</p>
+        <p><b>Email:</b> nst22@yandex.ru</p>
       </div>
 
       <div class = "education">
-        <h2>Education</h2>
-        <p>Higher education 2003-2008 Minsk Belarussian State University of Informatics and Radioelectronics
-            Faculty: Engineering and economics
-            Specialty: Marketing</p>
-            Languages Russian — Native</p>
-            English — B1 — Intermediate</p>
-            German — B1 — Intermediate</p>
-      </div>
+          <h2>Education</h2>
+        <h3>Higher education</h3>
+        <p><b>2003-2008 Minsk Belarussian State University of Informatics and Radioelectronics</b></p>
+            <b>Faculty:</b> Engineering and economics
+            <b>Specialty:</b> Marketing</p>
+        
+        <h3>Languages</h3> 
+        <b>Russian</b> — Native</p>
+            <b>English</b> — B1 — Intermediate</p>
+            <b>German</b> — B1 — Intermediate</p>
 
-      <div class = "education">
-        <h2>Tests, examinations</h2>
-        <p>2019 Amocrm Certificate</p>> 
+        <h3>Tests, examinations</h3>
+        <p><b>2019</b> Amocrm Certificate</p>
     </div>
 
 
-    <div class = "Working">
-        <h2>Workin expierence</h2>
-        <h3>June 2018 - currently</h3>>
-Freelance
-Individual entrepreneurship / private practice / freelance
-Website development and promotion
-SEO optimization for Yandex and Google
+    <div class = "working">
+        <h2>Working expierence</h2>
+        <h3>June 2018 - currently</h3>
+<b>Freelance</b>
+<b>Individual entrepreneurship / private practice / freelance</b>
+<li>Website development and promotion</li>
+<li>SEO optimization for Yandex and Google</li>
 
 <h3>August 2013 - january 2015</h3>
-Clothing store “TKT” (Minsk) Retail
-Marketing and Advertising Manager, Account Manager
+<b>Clothing store “TKT” (Minsk) Retail</b>
+<b>Marketing and Advertising Manager, Account Manager</b>
 
-Planning and implementation of advertising and marketing activities, control over their implementation
-Development and ordering of advertising and information products
-Advertising on the Internet, contextual advertising
-Interaction with wholesale buyers
-Compilation and maintenance of a client database
-Order control
+<li>Planning and implementation of advertising and marketing activities, control over their implementation
+<li>Development and ordering of advertising and information products
+<li>Advertising on the Internet, contextual advertising
+    <li>Interaction with wholesale buyers
+        <li>Compilation and maintenance of a client database
+            <li>Order control
 <h3>June 2012 — august 2013</h3>
-Store chain “My Computer” (Minsk) Electronics, Tool Engineering, Household Appliances, Computers and Office Equipment
-Marketing Manager
+<b>Store chain “My Computer” (Minsk) Electronics, Tool Engineering, Household Appliances, Computers and Office Equipment
+Marketing Manager</b>
 
-Planning and implementation of advertising and marketing activities, control over their implementation
-Drafting advertising texts, articles
-Market analysis, monitoring of competitors
-Filling the site, working with the content management system
-Development and ordering of advertising and information products
-SMM
-Interaction with contractors and freelancers, preparation of technical specifications
+<li>Planning and implementation of advertising and marketing activities, control over their implementation
+<li>Drafting advertising texts, articles
+<li>Market analysis, monitoring of competitors
+<li>Filling the site, working with the content management system
+<li>Development and ordering of advertising and information products
+<li>SMM
+<li>Interaction with contractors and freelancers, preparation of technical specifications
 <h3>September 2009 — may 2010</h3>
-Unitary Enterprise “Деловые программы” (Minsk) IT, System Integration, Internet
-Marketing manager
+<b>Unitary Enterprise “Деловые программы” (Minsk) IT, System Integration, Internet
+Marketing manager</b>
 
-Analysis of the project services market
-Conclusion of contracts with customers, order management
-Search for new clients
-Work on the site and its content
-Database maintenance
-Marketing reports and plans
+
+<li>Analysis of the project services market
+<li>Conclusion of contracts with customers, order management
+<li>Search for new clients
+<li>Work on the site and its content
+<li>Database maintenance
+<li>Marketing reports and plans
 <h3>September 2007 — august 2009</h3>
-LTD “BELDTS” (Minsk) IT, System Integration, Internet
-Marketing manager
+<b>LTD “BELDTS” (Minsk) IT, System Integration, Internet
+Marketing manager</b>
 
-Analysis of the printing market
-Experience in prepress preparation (layout of photo magazines, fashion magazines for the Belarusian Fashion Center)
-Organizing and conducting presentations in Belarus and abroad
-Maintaining internal records and databases
-Competitive analysis
-Search for new clients
-Reporting in German/English, business correspondence
+<li>Analysis of the printing market
+<li>Experience in prepress preparation (layout of photo magazines, fashion magazines for the Belarusian Fashion Center)
+<li>Organizing and conducting presentations in Belarus and abroad
+<li>Maintaining internal records and databases
+<li>Competitive analysis
+<li>Search for new clients
+<li>Reporting in German/English, business correspondence</li>>
 <h3>January 2004 — january 2007</h3>
-«DTS Service GmbH» IT, System Integration, Internet
-Secretary-reviewer
-Office Manager (2005)
-Economist (2005)
-Practice in the representative office of “DTS Service GmbH”
+<b>«DTS Service GmbH» IT, System Integration, Internet
+<p>Secretary-reviewer 
+<p>Office Manager (2005)
+<p>Economist (2005)
+<p>Practice in the representative office of “DTS Service GmbH”</b>
 
-Preparation of documents, reception of visitors, preparation of negotiations and meetings, coordination of business trips.
-Key skills
--Website development on CMS (WordPress, Opencart)
--SEO Promotion
--Programming languages: HTML, CSS, JavaScript (in progress)
--Adobe Photoshop, Corel Draw
+<li>Preparation of documents, reception of visitors, preparation of negotiations and meetings, coordination of business trips.
+<h2>Key skills </h2>
+<li>Website development on CMS (WordPress, Opencart)
+<li>SEO Promotion
+<li>Programming languages: HTML, CSS, JavaScript (in progress)
+<li>Adobe Photoshop, Corel Draw
 
-Driving experience
-Driver’s license category B
-    </div>
 
       <footer>
-      <div class = "Footer">
+      <div class = "footer">
         <h2>Social links</h2>
-        </div>>
+<div class = "fb">
+    <a href="https://www.facebook.com/nastassia.klim"><img src="fb.png" alt="Facebook" ></a>
+        </div>
     </footer>
+</div>
 </body>
 </html>
+
+<style>
+.body {
+
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 14px;
+    text-align: center;
+}
+
+.header {
+    text-decoration-line: underline;
+    text-decoration-color: #FAE04A;
+}
+
+.footer{
+    background-color: #FAE04A;
+}
+
+.education h3 {
+background-color: #E2DDC1;
+}
+
+.education h2{
+    background-color: #FAE04A;
+}
+.working h2{
+    background-color: #FAE04A;
+}
+
+.working h3 {
+background-color: #E2DDC1;
+}
+
+.contacts h2{
+    background-color: #FAE04A;
+}
+.personal h2{
+    background-color: #FAE04A;
+}
+
+.fb img{
+    width:50px;
+}
+  </style>  
